--- a/style/style.css
+++ b/style/style.css
@@ -1283,40 +1283,38 @@ section.sale__catalog .filter  {
 section.sale__catalog .filter .fa-chevron-circle-up { color: #d9d9d9; }
 
 
-.pagination {margin: 0 auto 20px;}
-.pagination button {
-	cursor: pointer;
-	width: 40px;
-	height: 40px;
-	text-align: center;
-	background-color: #d9d9d9;
-	border: none;
-	outline: none;
-	border-radius: 100%
-}
-.pagination a {
+
+ul.pagination {margin: 0 auto 20px}
+ul.pagination li { display: block; margin: 0 5px; }
+ul.pagination .previous-off,
+ul.pagination .next-off { display: none }
+.pagination li a {
 	font-size: 12px;
 	font-weight: normal;
 	line-height: 1.5;
 	text-align: center;
 	color: #262626;
-	margin: 0 5px;
-}
-.pagination a:nth-child(2),
-.pagination a:nth-child(6) {
+	display: block;
 	width: 47px;
   	height: 20px;
   	border-radius: 2px;
   	background-color: #d9d9d9;
 }
-.pagination a:nth-child(3),
-.pagination a:nth-child(5) {
-	width: 47px;
-	height: 20px;
-	border-radius: 2px;
+.pagination a:hover {
 	background-color: #bfbfbf;
 }
-.pagination a:nth-child(4) {
+.pagination .previous a,
+.pagination .next a {
+	cursor: pointer;
+	width: 40px;
+	height: 40px;
+	padding: 10px;
+	background-color: #d9d9d9;
+	border: none;
+	outline: none;
+	border-radius: 100%
+}
+.pagination .active {
 	width: 47px;
 	height: 30px;
 	border-radius: 2px;
