--- a/app/services/cart/style/cart.css
+++ b/app/services/cart/style/cart.css
@@ -31,6 +31,7 @@
 	color: #fff;
 	background-color: #3b5998;
     background-image: linear-gradient(#4e69a2, #3b5998 50%);
+    border: none;
     border-bottom: 1px solid #133783;
     width: 100%;
     padding: 10px;
