--- a/style/style.css
+++ b/style/style.css
@@ -170,6 +170,7 @@ header form button {
     background: transparent;
 	right: 10px;
 	border: none;
+	padding: 0;
 }
 header form button .fa-search {color:#d9d9d9;font-size: 12px; }
 header form button i {
