--- a/style/ws__main.css
+++ b/style/ws__main.css
@@ -67,19 +67,19 @@
 .clearfix { clear: both }
 .relative { position: relative }
 
-.alert { padding: 15px; color: #fff }
+.alert { padding: 15px; margin-bottom: 15px; color: #fff }
 .alert-danger { background-color: #f52323 }
 .alert-success { background-color: #00ad00; color: #fff }
 .alert .close { float: right }
 .alert p { margin: 5px !important }
 
 .btn { padding: 5px 15px; color: #fff; border: none; cursor: pointer }
-.btn-danger { background-color: #f52323 }
-.btn-danger { background-color: #f52323 }
-.btn-success { background-color: #00ad00 }
-.btn-success:hover { background-color: #019a01 }
-.btn-warning { background-color: #f59c1a }
-.btn-warning:hover { background-color: #e29018 }
+.btn.btn-danger { background-color: #f52323 }
+.btn.btn-danger { background-color: #f52323 }
+.btn.btn-success { background-color: #00ad00 }
+.btn.btn-success:hover { background-color: #019a01 }
+.btn.btn-warning { background-color: #f59c1a }
+.btn.btn-warning:hover { background-color: #e29018 }
 
 .hide { display: none }
 .show { display: block }
