--- a/style/ws__main.css
+++ b/style/ws__main.css
@@ -68,14 +68,15 @@
 .relative { position: relative }
 
 .alert { padding: 15px; margin-bottom: 15px; color: #fff }
-.alert-danger { background-color: #f52323 }
-.alert-success { background-color: #00ad00; color: #fff }
+.alert.alert-danger { background-color: #f52323 }
+.alert.alert-warning { background-color: #f59c1a }
+.alert.alert-success { background-color: #00ad00 }
 .alert .close { float: right }
 .alert p { margin: 5px !important }
 
 .btn { padding: 5px 15px; color: #fff; border: none; cursor: pointer }
 .btn.btn-danger { background-color: #f52323 }
-.btn.btn-danger { background-color: #f52323 }
+.btn.btn-danger:hover { background-color: #d41e1e }
 .btn.btn-success { background-color: #00ad00 }
 .btn.btn-success:hover { background-color: #019a01 }
 .btn.btn-warning { background-color: #f59c1a }
