--- a/style/style.css
+++ b/style/style.css
@@ -280,9 +280,10 @@ main h1 {
 	font-style: normal;
 	letter-spacing: 2px;
 	text-align: center;
-	color: #666666;
+	color: #666;
+	margin-bottom: 15px;
 }
-main .main__logo { margin: 20px auto 40px }
+main .main__logo { margin: 0 auto 40px }
 main .logo__text {
 	margin-top: 10px;
 	text-align: center;
@@ -1488,16 +1489,19 @@ main.detal section.detal__info .info__price .discount .discount__price {
 	color: #7cbe49;
 }
 main.detal section.detal__info .info__price .card__check.detal__check {margin-top: 24px;}
-main.detal section.detal__info .info__price .card__check.detal__check .fa-check-circle {
+main.detal section.detal__info .info__price .card__check.detal__check .fas {
 	margin-right: 12px;
 	font-size: 18px;
 	color: #7cbe49;
 	border-radius: 100%;
 }
+main.detal section.detal__info .info__price .card__check.detal__check .fa-times-circle {
+	color: #FFC505;
+}
 main.detal section.detal__info .info__price .card__check.detal__check p {
 	font-size: 13px;
 	font-weight: normal;
-	color: #666666;
+	color: #666;
 }
 
 main.detal section.detal__info .info__price .card__check.detal__check span.minus {
@@ -1663,11 +1667,11 @@ main.cars__models .cars__model span {
 	line-height: 1.35;
 	letter-spacing: 2px;
 	text-transform: uppercase;
-	color: #666666;
+	color: #666;
 	margin-left: 20px;
 }
-main.cars__models .cars__model .model_info > div { width: 135px; text-align: center; }
-main.cars__models .cars__model .model_info > div img { width: auto; height: 60px; }
+main.cars__models .cars__model .model_info > div { width: 135px; text-align: center }
+main.cars__models .cars__model .model_info > div img { width: auto; height: 50px }
 
 main.cars__models .cars__model button {
 	width: 54px;
@@ -2503,7 +2507,7 @@ main.cars__models .models__byd button {
 	main .catalog__detal a img {height: 40px;}
 	main div.flex.wrap.catalog__detal a {
 		text-align: center;
-		width: 20%;
+		width: 25%;
 		margin-bottom: 10px;
 	}
 	main .catalog__info {margin: 15px 0 15px 0;}
@@ -2514,19 +2518,21 @@ main.cars__models .models__byd button {
 		padding: 2px 5px;
 		font-size: 10px;
 	}
-	main .catalog__sorted .quantity__goods { font-size: 13px;}
-	main section.sale__catalog {flex-wrap: wrap;}
-	section.sale__catalog aside.w25 {width: 100%;}
+	main .catalog__sorted .quantity__goods { font-size: 13px }
+	main section.sale__catalog {flex-wrap: wrap }
+	main .pagination,
+	section.sale__catalog .filter,
+	section.sale__catalog aside.w25,
 	section.sale__catalog .product__type,
 	section.sale__catalog .quality,
 	section.sale__catalog .manufacturers,
-	section.sale__catalog .storag {width: 100%;}
+	section.sale__catalog .storag { width: 100% }
 	main section.sale__catalog .sale__wrrap {
 		margin-top: 10px;
 		width: 100%;
 	}
-	section.sale__catalog .sale__wrrap .sale__card {width: 50%;}
-	main .pagination {width: 100%;}
+	section.sale__catalog .sale__wrrap .sale__card {width: 50%}
+	main.cars__manufacturers section.catalog__name div a figure img { width: 80px; height: 80px }
 
 	/*               catalog                 */
 	/*                detal                */
@@ -2667,7 +2673,15 @@ main.cars__liquids .liquids__list a figure figcaption {font-size: 13px;}
 	}
 	main .main__logo a img {height: 30px;}
 	main div.flex.w66.main__logo { align-items: flex-start;}
-	main .logo__text { white-space: pre-wrap;}
+	main .logo__text { white-space: pre-wrap }
+	main.cars__models .cars__model {
+		height: 60px;
+		padding-left: 15px;
+	}
+	main.cars__models .cars__model .model_info > div { width: 100px }
+	main.cars__models .cars__model .model_info > div img { height: 40px }
+	main.cars__models .cars__model button { width: 30px; height: 30px }
+	main.cars__models .cars__model button img { width: 60% }
 	main section.cars__base .base__detal .detal__text {
 		font-size: 13px;
 		margin-bottom: 20px;
